# windows-splash-screen

./: Cargo.toml  build.rs
src/: audio.rs  lib.rs  main.rs  shell.rs
src/futures/: mod.rs  time_delay.rs  yes_no.rs
