[package]
name = "custom_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { git = "https://github.com/Zycrasion/utils.git", version = "0.3.1" }
windows = { version = "0.62.2", features = ["Win32_UI_Shell"] }
iced = { version = "0.13.1", features = ["image"]}

[dependencies.windows-registry]
version = "0.6"

[build-dependencies]
static_vcruntime = "3.0"
winres = "0.1"
