[package]
name = "custom_shell"
version = "0.1.0"
edition = "2024"
default-run = "custom_shell"

[dependencies]
utils = { git = "https://github.com/Zycrasion/utils.git", version = "0.3.2" }
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_System_Shutdown"] }
iced = { version = "0.13.1", features = ["image"]}
device_query = "4.0.1"
rodio = "0.21.1"

[dependencies.windows-registry]
version = "0.6"

[build-dependencies]
static_vcruntime = "3.0"
winres = "0.1"

[profile.release]
lto = "fat"
opt-level = "z"